--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -9,7 +9,9 @@
             <h2 class="text-primary">Categories</h2>
         </div>
         <div class="col-6 text-right">
-            <a sp-controller="Category" asp-action="Create" class="btn btn-primary"> Create New Category </a>
+            <a sp-controller="Category" asp-action="Create" class="btn btn-primary"> 
+            <i class="fa-solid fa-plus"></i> Create New Category 
+            </a>
         </div>
     </div>
     <br /><br />
@@ -33,8 +35,8 @@
                                 <td width="30%">@obj.DisplayOrder</td>
                                 <td class="text-center">
                                     <div class="w-75 btn-group">
-                                        <a sp-controller="Category" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary mx-2"> Edit </a>
-                                        <a sp-controller="Category" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2"> Delete </a>
+                                        <a sp-controller="Category" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary mx-2"> <i class="fa-solid fa-pen-to-square"></i>  </a>
+                                        <a sp-controller="Category" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger mx-2"> <i class="fa-solid fa-trash-arrow-up"></i>  </a>
                                     </div>
                                 </td>
                             </tr>
